--- a/index.html
+++ b/index.html
@@ -85,4 +85,81 @@ Copy code
 </script>
 
 </body>
-</html>	
+</html>	<!DOCTYPE html>
+<html>
+<head>
+<title>Rahim - Student Developer</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: linear-gradient(135deg, #1e3c72, #2a5298);
+    color: white;
+    text-align: center;
+}
+
+.container {
+    padding: 40px 20px;
+}
+
+h1 {
+    font-size: 35px;
+}
+
+.section {
+    background: rgba(255,255,255,0.1);
+    margin: 20px auto;
+    padding: 20px;
+    width: 85%;
+    max-width: 600px;
+    border-radius: 15px;
+}
+
+button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    background: #ff9800;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background: orange;
+}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+
+<h1>Welcome to Rahim's Website 🚀</h1>
+<h3>Future Web Developer</h3>
+
+<div class="section">
+<h2>About Me</h2>
+<p>
+Assalamualaikum! 👋 <br>
+I am Rahim, a student of 9th class learning coding and web development.
+My dream is to become a professional software developer.
+</p>
+</div>
+
+<div class="section">
+<h2>Free Notes</h2>
+<p>Download my Class 9 notes below:</p>
+<button onclick="alert('Notes coming soon!')">Download Notes</button>
+</div>
+
+<div class="section">
+<h2>Contact Me</h2>
+<p>Email: rahim@example.com</p>
+</div>
+
+</div>
+
+</body>
+</html>
