--- a/index.html
+++ b/index.html
@@ -176,11 +176,50 @@ My dream is to become a professional software developer.
     <p>This is my personal website.</p>
 
 </body>
-</html>
-<h2>Visit My Resources Website 🌐</h2>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <title>Yasir Rahim | Official Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-<a href="https://sites.google.com/view/resourcespoint" target="_blank">
-    <button style="padding:10px 20px; font-size:16px; background:orange; border:none; border-radius:8px;">
-        Open Resources Point
-    </button>
-</a>
+<body style="margin:0; font-family:Arial, sans-serif; background:#f4f4f4; text-align:center;">
+
+    <!-- Header -->
+    <div style="background:#111; color:white; padding:30px;">
+        <h1>Yasir Rahim</h1>
+        <p>Welcome to My Official Website 🚀</p>
+    </div>
+
+    <!-- Profile Section -->
+    <div style="padding:40px;">
+        <img src="FB_IMG_1692458284526~2.jpg" width="200"
+        style="border-radius:50%; box-shadow:0 5px 15px rgba(0,0,0,0.3);">
+
+        <h2 style="margin-top:20px;">About Me</h2>
+        <p style="max-width:600px; margin:auto; font-size:18px;">
+            Hello! I am Yasir Rahim. I am learning web development and building my own websites.
+            This is my personal portfolio website.
+        </p>
+    </div>
+
+    <!-- Second Website Button -->
+    <div style="margin:40px;">
+        <h2>Click the 2nd web for more information 🌐</h2>
+
+        <a href="https://sites.google.com/view/resourcespointstudent/home" target="_blank">
+            <button style="padding:15px 30px; font-size:18px; background:#ff9800;
+            color:white; border:none; border-radius:10px; cursor:pointer;
+            box-shadow:0 5px 10px rgba(0,0,0,0.2);">
+                Open 2nd Website
+            </button>
+        </a>
+    </div>
+
+    <!-- Footer -->
+    <div style="background:#111; color:white; padding:20px; margin-top:50px;">
+        <p>© 2026 Yasir Rahim | All Rights Reserved</p>
+    </div>
+
+</body>
+</html>
