--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Yasir Rahim | Official Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
+<body style="margin:0; font-family:Arial, sans-serif; text-align:center;">
+
+    <div style="background:#111; color:white; padding:30px;">
+        <h1>Yasir Rahim</h1>
+        <p>Welcome to My Official Website 🚀</p>
+    </div>
+
+    <div style="padding:40px;">
+        <img src="FB_IMG_1692458284526-2.jpg" width="200" 
+        style="border-radius:50%; box-shadow:0 5px 15px rgba(0,0,0,0.3);">
+        
+        <p>This is my personal website.</p>
+    </div>
+
+</body>
+</html>
