--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-
+.profile-pic{
+width:200px;
+height:200px;
+border-radius:50%;
+object-fit:cover;
+margin-top:30px;
+border:4px solid #00f0ff;
+box-shadow:0 0 25px #00f0ff;
+}
 *{
 margin:0;
 padding:0;
